--- a/app/src/main/res/menu/user_menu.xml
+++ b/app/src/main/res/menu/user_menu.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:title="Select User"
-        app:showAsAction="always"
-        android:id="@+id/user_select"/>
+    <item
+        android:id="@+id/user_select"
+        android:title="Select User"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/repo_select"
+        android:title="Repo"
+        app:showAsAction="always" />
+
 </menu>
