--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,93 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
-    android:orientation="vertical"
     tools:context="au.elegantmedia.com.mygithubacc.activities.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_gravity="center_horizontal|center_vertical"
-        android:layout_margin="16dp"
-        android:layout_weight="1.5"
-        android:background="@android:color/white"
-        android:orientation="vertical"
-        android:padding="8dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/avatar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:layout_marginBottom="8dp"
-            android:background="@mipmap/ic_launcher_round" />
-
-        <TextView
-            android:id="@+id/login_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:text="login name" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_margin="16dp"
-        android:layout_weight="1"
-        android:background="@android:color/white"
-        android:orientation="vertical"
-        android:padding="32dp">
-
-        <TextView
-            android:id="@+id/tv_name"
-            style="@style/textCus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="name" />
-
-        <TextView
-            android:id="@+id/tv_company"
-            style="@style/textCus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="company" />
-
-        <TextView
-            android:id="@+id/tv_location"
-            style="@style/textCus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="location" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_margin="16dp"
+            android:layout_weight="1.5"
+            android:background="@android:color/white"
+            android:orientation="vertical"
+            android:padding="8dp">
 
-
-            <TextView
+            <ImageView
+                android:id="@+id/avatar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Repos : "
-                android:textSize="17dp" />
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_marginBottom="8dp"
+                android:background="@mipmap/ic_launcher_round" />
 
             <TextView
-                android:id="@+id/tv_repo"
-                style="@style/textCus"
+                android:id="@+id/login_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="repo" />
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:text="login name" />
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="16dp"
+            android:layout_weight="1"
+            android:background="@android:color/white"
+            android:orientation="vertical"
+            android:padding="32dp">
+
+            <TextView
+                android:id="@+id/tv_name"
+                style="@style/textCus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="name" />
+
+            <TextView
+                android:id="@+id/tv_company"
+                style="@style/textCus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="company" />
+
+            <TextView
+                android:id="@+id/tv_location"
+                style="@style/textCus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="location" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Repos : "
+                    android:textSize="17dp" />
+
+                <TextView
+                    android:id="@+id/tv_repo"
+                    style="@style/textCus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="repo" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
 
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true" />
 
-</LinearLayout>
+</RelativeLayout>
